# pico2-atwinc1500

./: .gitignore  CMakeLists.txt  CODE_REVIEW_FINAL.md  IMPLEMENTATION_NEXT_STEPS.md  LICENSE  PROJECT_SUMMARY.md  README.md  README_SIMPLE.md  SIMPLIFIED_DESIGN.md  WINC1500_PICO2.c  WINC1500_PICO2_Node1.uf2  WINC1500_PICO2_Node2.uf2  example_mesh_node.c  raspberrypi-swd.cfg  winc_lib.c  winc_lib.h  winc_mesh.c  winc_p2p.c  winc_p2p.h  winc_pico_part2.c  winc_sock.c  winc_sock.h  winc_telemetry.c  winc_telemetry.h  winc_wifi.c  winc_wifi.h
docs/archive/: IMPLEMENTATION_ROADMAP.md  README_MESH.md
test/: test_tcp.c
